--- a/LambdaTimeline/Resources/Info.plist
+++ b/LambdaTimeline/Resources/Info.plist
@@ -54,5 +54,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>$(PRODUCT_NAME) Needs to use the microphone to record your audio comment.</string>
 </dict>
 </plist>
